--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version: "3.9"
 
 services:
@@ -30,6 +31,7 @@ services:
 
 networks:
   ai_network:
+    driver: bridge
 
 volumes:
   mongo_data:
