--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,9 @@ Jinja2==3.1.6
 jiter==0.10.0
 jsonify==0.5
 MarkupSafe==3.0.2
+numpy==2.0.2
 openai==1.99.9
+pandas==2.3.3
 pdfminer.six==20250506
 proto-plus==1.26.1
 protobuf==5.29.5
@@ -45,14 +47,17 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 pymongo==4.6.1
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 requests==2.32.4
 rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
