--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
-pymongo==4.6.1
+pymongo==4.6.3
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -63,3 +63,4 @@ uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 zipp==3.23.0
+openpyxl==3.1.5
